arrumei as imagens

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,59 +31,59 @@
         <h2>Produtos em Destaque</h2>
         <div class="produtos-container">
             <div class="produto">
-                <img src="../static/img/produto1.jpg" alt="Produto 1">
-                <h3>Produto 1</h3>
-                <p>Descrição do Produto 1</p>
-                <p>R$ 99,99</p>
+                <img src="../static/img/Smartphone.png" alt="Produto 1">
+                <h3>Smartphone X-Prime 8</h3>
+                <p>Celular com tela AMOLED de 6,5", 128 GB de armazenamento, câmera tripla de 50 MP</p>
+                <p>R$ 2.499,00</p>
                 <button>Adicionar ao Carrinho</button>
             </div>
             <div class="produto">
-                <img src="../static/img/produto2.jpg" alt="Produto 2">
-                <h3>Produto 2</h3>
-                <p>Descrição do Produto 2</p>
-                <p>R$ 149,99</p>
+                <img src="../static/img/Laptop.png" alt="Produto 2">
+                <h3>Notebook UltraSlim 14</h3>
+                <p>Notebook leve e portátil, Intel i5 12ª geração, 8 GB RAM, SSD 256 GB.</p>
+                <p>R$ 3.299,00</p>
                 <button>Adicionar ao Carrinho</button>
             </div>
             <div class="produto">
-                <img src="../static/img/produto3.jpg" alt="Produto 3">
-                <h3>Produto 3</h3>
-                <p>Descrição do Produto 3</p>
-                <p>R$ 199,99</p>
+                <img src="../static/img/headset.png" alt="Produto 3">
+                <h3>Fone de Ouvido Bluetooth SoundBeat</h3>
+                <p>Fones sem fio com cancelamento de ruído, bateria de 20h, compatível com Android e iOS.</p>
+                <p>R$ 229,90</p>
                 <button>Adicionar ao Carrinho</button>
             </div>
             <div class="produto">
-                <img src="../static/img/produto4.jpg" alt="Produto 4">
-                <h3>Produto 4</h3>
-                <p>Descrição do Produto 4</p>
-                <p>R$ 249,99</p>
+                <img src="../static/img/cadeira.webp" alt="Produto 4">
+                <h3>Cadeira Gamer Reclinável ProChair V2</h3>
+                <p>Cadeira ergonômica com ajuste de altura, apoio lombar e inclinação até 150º.</p>
+                <p>R$ 849,00</p>
                 <button>Adicionar ao Carrinho</button>
             </div>
             <div class="produto">
-                <img src="../static/img/produto5.jpg" alt="Produto 5">
-                <h3>Produto 5</h3>
-                <p>Descrição do Produto 5</p>
-                <p>R$ 129,99</p>
+                <img src="../static/img/impressora.webp" alt="Produto 5">
+                <h3>Impressora Multifuncional InkJet 3 em 1</h3>
+                <p>Impressora, scanner e copiadora, conexão Wi-Fi, ideal para home office.</p>
+                <p>R$ 549,90</p>
                 <button>Adicionar ao Carrinho</button>
             </div>
             <div class="produto">
-                <img src="../static/img/produto6.jpg" alt="Produto 6">
-                <h3>Produto 6</h3>
-                <p>Descrição do Produto 6</p>
-                <p>R$ 179,99</p>
+                <img src="../static/img/mouse.webp" alt="Produto 6">
+                <h3>Mouse Gamer RGB ForceClick</h3>
+                <p>Mouse com 7 botões programáveis, sensor de 12.000 DPI, iluminação RGB.</p>
+                <p>R$ 189,90</p>
                 <button>Adicionar ao Carrinho</button>
             </div>
             <div class="produto">
-                <img src="../static/img/produto7.jpg" alt="Produto 7">
-                <h3>Produto 7</h3>
-                <p>Descrição do Produto 7</p>
-                <p>R$ 219,99</p>
+                <img src="../static/img/monitor.webp" alt="Produto 7">
+                <h3>Monitor LED 24" Full HD VisionView</h3>
+                <p>Tela IPS com resolução Full HD, bordas finas e tecnologia Flicker-Free.</p>
+                <p>R$ 899,00</p>
                 <button>Adicionar ao Carrinho</button>
             </div>
             <div class="produto">
-                <img src="../static/img/produto8.jpg" alt="Produto 8">
-                <h3>Produto 8</h3>
-                <p>Descrição do Produto 8</p>
-                <p>R$ 299,99</p>
+                <img src="../static/img/teclado.webp" alt="Produto 8">
+                <h3>Teclado Mecânico RedSwitch Pro</h3>
+                <p>Teclado com switches vermelhos, anti-ghosting, retroiluminação RGB.</p>
+                <p>R$ 329,90</p>
                 <button>Adicionar ao Carrinho</button>
             </div>
         </div>
